# rosbag_extractor

./: README.md  package.xml  requirements.txt
scripts/: bag_csv
src/rosbag_pandas/: rosbag_pandas.py
